# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md
include/: AABB.hpp  Image.hpp  Intersect.hpp  Light.hpp  Material.hpp  Ray.hpp  Scene.hpp  ThreadPool.h  box.hpp  camera.hpp  generate_scene.hpp  option.hpp  rect.hpp  screen.hpp  sphere.hpp  texture.hpp  triangle.hpp  types.hpp  utility.hpp  volumetric.hpp
include/memory/: Allocator.hpp  memmanager.hpp
include/profile/: timeprofile.hpp
src/: RayTracer.cpp  utility.cpp
src/cuda/: kernel_raytracer.cu
